--- a/src/com/zhisheng/binarytree/one/题目：二叉树打印.md
+++ b/src/com/zhisheng/binarytree/one/题目：二叉树打印.md
@@ -5,3 +5,7 @@
 给定二叉树的根结点root，请返回打印结果，结果按照每一层一个数组进行储存，
 
 所有数组的顺序按照层数从上往下，且每一层的数组内元素按照从左往右排列。保证结点数小于等于500。
+
+***
+
+参见博客：[【二叉树】二叉树打印](http://blog.csdn.net/tzs_1041218129/article/details/54629516)
