字符串旋转

--- a/src/com/zhisheng/binarytree/two/题目二：字符串旋转.md
+++ b/src/com/zhisheng/binarytree/two/题目二：字符串旋转.md
@@ -11,3 +11,7 @@
 > "cdab",4,"abcd",4
 
 > 返回：true
+
+***
+
+参加博客：[【字符串】判断两字符串是否互为旋转词？](http://blog.csdn.net/tzs_1041218129/article/details/54646987)
